--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "homepage": "https://github.com/turingschool-examples/game-time-starter-kit-FEm1#readme",
   "devDependencies": {
     "babel": "^6.5.2",
-
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
     "chai": "^3.5.0",
     "css-loader": "^0.26.0",
+    "jquery": "^3.2.1",
     "mocha": "^3.1.2",
     "mocha-loader": "^1.0.0",
     "node-libs-browser": "^1.0.0",
