--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-time-starter-kit-fem1",
   "version": "1.0.0",
   "description": "Starter kit for Turing School's front-end module 1 Game Time project",
-  "main": "/lib/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "build": "./node_modules/webpack/bin/webpack.js",
